ILogger implemented and connection to azure sql database established

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
+  "KeyVault": "GymQuest-KV",
   "ConnectionStrings": {
-    "LocalSQLDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WorkoutLogDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "LocalSQLDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WorkoutDBTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AzureSQLDatabase": ""
   },
   "Logging": {
     "LogLevel": {
