--- a/.github/workflows/master_gymquest.yml
+++ b/.github/workflows/master_gymquest.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - GymQuest
 
 on:
@@ -21,17 +18,24 @@ jobs:
         with:
           dotnet-version: '8.x'
 
+      # Restore dependencies
+      - name: Restore dependencies
+        run: dotnet restore
+
+      # Build the app
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      # Publish the app
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish --configuration Release --output ./publish_output
 
+      # Upload artifact for deployment job
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./publish_output
 
   deploy:
     runs-on: windows-latest
@@ -40,14 +44,16 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
+      # Download the published artifact
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
       
+      # Login to Azure
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +61,11 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_282B69600EDA4002933EFF558F805842 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_BD7953A70D334B5EA5CFC0B9B4E46AD3 }}
 
+      # Deploy to Azure Web App
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'GymQuest'
           slot-name: 'Production'
-          package: .
-          
+          package: ./publish_output
