--- a/.github/workflows/master_gymquest.yml
+++ b/.github/workflows/master_gymquest.yml
@@ -52,7 +52,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+          path: ./artifact_output
+
       # Login to Azure
       - name: Login to Azure
         uses: azure/login@v2
@@ -68,4 +69,4 @@ jobs:
         with:
           app-name: 'GymQuest'
           slot-name: 'Production'
-          package: ./publish_output
+          package: ./artifact_output
