changed db connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "KeyVault": "GymQuest-KV",
   "ConnectionStrings": {
-    "LocalSQLDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WorkoutDBTest;Integrated Security=True;Connect Timeout=120;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "LocalSQLDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=GymQuest;Integrated Security=True;Connect Timeout=120;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "AzureSQLDatabase": ""
   },
   "Logging": {
